--- a/src/main/webapp/csr/index.html
+++ b/src/main/webapp/csr/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TiTilda Music</title>
-    <link rel="stylesheet" href="/csr/css/home.css">
-    <link rel="stylesheet" href="/csr/css/styles.css">
-    <script src="/csr/js/index.js" defer></script>
+    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/styles.css">
+    <script type="module" src="/js/index.js"></script>
 </head>
 <body class="dark-theme">
 <nav class="topbar">
