--- a/src/main/webapp/csr/index.html
+++ b/src/main/webapp/csr/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TiTilda Music</title>
     <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet" href="/css/styles.css">
     <script type="module" src="/js/index.js"></script>
 </head>
@@ -129,14 +130,34 @@
 </template>
 
 <template id="login">
-    <h2>Login</h2>
-    <section>
-        <p>This page contains multiple sections.</p>
-        <div style="background:#eee;padding:10px;">
-            <h3>Mission</h3>
-            <p>We build simple SPAs without frameworks.</p>
+    <div class="auth-page">
+        <div class="auth-form">
+            <h2>Login</h2>
+            <div class="form-content">
+                <form id="login-form">
+                    <div class="form-group">
+                        <label for="username">Username:</label>
+                        <input type="text" id="username" name="username" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password:</label>
+                        <input type="password" id="password" name="password" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Login">
+                    </div>
+
+                    <div class="error-message">
+                        <p class="error-text">Error</p>
+                    </div>
+                </form>
+
+                <div class="auth-links">
+                    <p>Don't have an account? <a href="/signup">Sign up here</a></p>
+                </div>
+            </div>
         </div>
-    </section>
+    </div>
 </template>
 
 <template id="playlist">
