feat(csr): add toggle for nav visibility

--- a/src/main/webapp/csr/index.html
+++ b/src/main/webapp/csr/index.html
@@ -14,7 +14,7 @@
     <div class="topbar-container">
         <a data-route="/home" class="topbar-titilda">T~Music</a>
 
-        <div class="topbar-nav">
+        <div id="nav" class="topbar-nav hidden">
             <a data-route="/home" class="topbar-link">Home</a>
 
             <div class="profile-dropdown">
