--- a/src/main/webapp/csr/index.html
+++ b/src/main/webapp/csr/index.html
@@ -135,29 +135,65 @@
             <div class="form-content">
                 <form id="login-form">
                     <div class="form-group">
-                        <label for="username">Username:</label>
-                        <input type="text" id="username" name="username" required>
+                        <label for="login-username">Username:</label>
+                        <input type="text" id="login-username" name="username" required>
                     </div>
                     <div class="form-group">
-                        <label for="password">Password:</label>
-                        <input type="password" id="password" name="password" required>
+                        <label for="login-password">Password:</label>
+                        <input type="password" id="login-password" name="password" required>
                     </div>
                     <div class="form-group">
                         <input type="submit" value="Login">
                     </div>
 
-                    <div class="error-message">
+                    <div class="error-message hidden" id="login-error">
                         <p class="error-text">Error</p>
                     </div>
                 </form>
 
                 <div class="auth-links">
-                    <p>Don't have an account? <a href="/signup">Sign up here</a></p>
+                    <p>Don't have an account? <a id="signup-link">Sign up here</a></p>
                 </div>
             </div>
         </div>
     </div>
 </template>
+
+<template id="signup">
+    <div class="auth-page">
+        <div class="auth-form">
+            <h2>Login</h2>
+            <div class="form-content">
+                <form id="signup-form">
+                    <div class="form-group">
+                        <label for="signup-full-name">Full Name:</label>
+                        <input type="text" id="signup-full-name" name="fullName" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="signup-username">Username:</label>
+                        <input type="text" id="signup-username" name="username" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="signup-password">Password:</label>
+                        <input type="password" id="signup-password" name="password" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Sign up">
+                    </div>
+
+                    <div class="error-message hidden" id="signup-error">
+                        <p class="error-text">Error</p>
+                    </div>
+                </form>
+
+                <div class="auth-links">
+                    <p>Already have an account? <a id="login-link">Log in here</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</template>
+
 
 <template id="playlist">
     <h2>Playlist</h2>
