fix(csr): hide irrelevant text and show relevant one for playlist list

--- a/src/main/webapp/csr/index.html
+++ b/src/main/webapp/csr/index.html
@@ -46,19 +46,13 @@
             <section>
                 <h2>Your Playlists</h2>
                 <div>
-                    <p>No playlists yet.</p>
+                    <p class="playlist-empty">No playlists yet.</p>
                 </div>
                 <div class="playlist-header">
                     <span>Title</span>
                     <span>Date created</span>
                 </div>
                 <ol class="playlist-list">
-                    <li>
-                        <a class="playlist-btn">
-                            <span class="playlist-name">Playlist name</span>
-                            <span class="playlist-date">2025-01-01 12:00</span>
-                        </a>
-                    </li>
                 </ol>
 
                 <div>
