--- a/src/main/webapp/csr/index.html
+++ b/src/main/webapp/csr/index.html
@@ -61,10 +61,9 @@
 
             <section>
                 <h2>Create Song</h2>
-                <form class="create-song-form" action="/form/create-song" method="post" enctype="multipart/form-data">
-                    <!--/*@thymesVar id="error" type="java.lang.String"*/-->
-                    <div class="error-message">
-                        <p>Error</p>
+                <form class="create-song-form" id="create-song-form" method="post" enctype="multipart/form-data">
+                    <div class="error-message hidden">
+                        <p class="error-text">Error</p>
                     </div>
 
                     <div class="form-group">
@@ -92,7 +91,6 @@
                         <label class="form-label" for="genre">Genre</label>
                         <select class="form-input" id="genre" name="genre" required>
                             <option value="" disabled selected>Select a genre</option>
-                            <option></option>
                         </select>
                     </div>
 
