--- a/src/main/webapp/csr/index.html
+++ b/src/main/webapp/csr/index.html
@@ -25,7 +25,10 @@
 
                 <div class="dropdown-menu">
                     <a data-route="/logout" class="dropdown-item">
-                        <span>Logout</span>
+                        <span>Sign out</span>
+                    </a>
+                    <a data-route="/logout-everywhere" class="dropdown-item">
+                        <span>Sign out from all devices</span>
                     </a>
                 </div>
             </div>
@@ -54,9 +57,6 @@
                 </div>
                 <ol class="playlist-list">
                 </ol>
-
-                <div>
-                        </div>
             </section>
 
             <section>
