--- a/src/main/webapp/csr/index.html
+++ b/src/main/webapp/csr/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/playlist.css">
     <script type="module" src="/js/index.js"></script>
 </head>
 <body class="dark-theme">
@@ -19,7 +20,7 @@
 
             <div class="profile-dropdown">
                 <div class="profile-trigger">
-                    <span>User</span>
+                    <span id="nav-username">User</span>
                     <span class="dropdown-arrow"></span>
                 </div>
 
@@ -56,7 +57,7 @@
                 </ol>
 
                 <div>
-                        </div>
+                </div>
             </section>
 
             <section>
