feat(csr): add 404 Page not found

--- a/src/main/webapp/csr/index.html
+++ b/src/main/webapp/csr/index.html
@@ -254,5 +254,12 @@
     </main>
 </template>
 
+<template id="404">
+    <div class="error-page" style="text-align: center; padding: 50px;">
+        <h1>404 - Page Not Found</h1>
+        <p>The page you're looking for doesn't exist.</p>
+    </div>
+</template>
+
 </body>
 </html>
