feat(csr): hidden buttons in playlist page at the start

--- a/src/main/webapp/csr/index.html
+++ b/src/main/webapp/csr/index.html
@@ -233,7 +233,7 @@
         </div>
 
         <div class="song-row">
-            <a id="left-button" class="nav-btn">&lt;</a>
+            <a id="left-button" class="nav-btn" style="visibility: hidden;">&lt;</a>
 
             <table class="song-table">
                 <colgroup>
@@ -247,7 +247,7 @@
                 </tr>
             </table>
 
-            <a id="right-button" class="nav-btn">&gt;</a>
+            <a id="right-button" class="nav-btn" style="visibility: hidden;">&gt;</a>
         </div>
 
         <div id="add-song-form"></div>
