fix(csr): partially improve player css

--- a/src/main/webapp/csr/index.html
+++ b/src/main/webapp/csr/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/login.css">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/playlist.css">
+    <link rel="stylesheet" href="/css/songs.css">
     <script type="module" src="/js/index.js"></script>
 </head>
 <body class="dark-theme">
@@ -255,7 +256,7 @@
 </template>
 
 <template id="song">
-    <div class="top">
+    <div class="song-top">
         <a class="home-link">&lt Home</a>
     </div>
 
